--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "next": "11.0.1",
+    "polished": "^4.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "17.0.16",
+    "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.12",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
